<?xml version="1.0"?>
<package format="3">
  <name>orb_slam3_ros2</name>
  <version>0.1.0</version>
  <description>ROS2 RGB-D wrapper node for ORB-SLAM3</description>
  <maintainer email="wayne@example.com">wayne</maintainer>
  <license>GPL-3.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>cv_bridge</depend>
  <depend>message_filters</depend>
  <depend>image_transport</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
